fixed page alignments

--- a/frontend/src/app/modul-service/statistics/charts/charts.component.scss
+++ b/frontend/src/app/modul-service/statistics/charts/charts.component.scss
@@ -5,7 +5,7 @@
 #super-container{
   display: flex;
   justify-content: center;
-  width: 90vw;
+  width: 85vw;
 }
 
 #chart-container {
@@ -15,7 +15,6 @@
   justify-content: center;
   gap: 50px;
   padding: 50px 50px 50px 50px;
-  margin: 50px 50px 50px 50px;
 
 }
 
